opencore/browser/css/opencore.css
/* ... */
.oc-dropdown-list ul li.oc-dropdown-container.oc-hover {
  border: none;
}
.oc-dropdown-list li.oc-dropdown-container.oc-selected {
  background: url("/++resource++img/dropdown-nub-open.gif") no-repeat 98% 7px;
  border-bottom: none;
}
.oc-dropdown-list li.oc-dropdown-container ul {
  position: absolute;
  top: 1.8em;
  left: 0;
  margin: 0;
  padding: 0;
  width: 12em;
  background: #665D55;
  border: 1px solid #3D3935;
  border-right: 2px solid #332F2A;
  border-bottom: 2px solid #332F2A;
  z-index: 1000;
}
.oc-dropdown-list li.oc-dropdown-container li {
  float: left;
  list-style: none;
  clear: left;
  width: 100%;
  padding: 0;
  margin: 0;
  border: none;
}
.oc-dropdown-list li.oc-dropdown-container li a {
  display: block;
  margin: 0;
  padding: 0.125em .25em;
}
.oc-dropdown-list li.oc-dropdown-container li a:hover {
  background: #EB852B;
}
.oc-dropdown-list hr.oc-usermenu-divider {
  border: none;
  border-bottom: 1px solid #eee;
  margin: 0.25em 0;
}

/* @FOOTER - Global footer
--------------------------------------- */
#oc-footer ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  float: right;
  text-transform: uppercase;
  font-size: 9px;
}
#oc-footer li {
  display: inline;
  padding: 0 0.5em;
}
#oc-footer-about {
  text-align: left;
}
#oc-footer #oc-footer-about  a {
  text-decoration: underline;
}

/* version list */
#oc-version-list { 
  position: absolute;
  top: 0;
  left: 0;
  background: red;
  color: #fff;
  padding: 10px;
}

/* LAYOUT for @OpenPlans Pages
-------------------------------------------- */
/* This is where general layout elements within the content of a page are defined. Could also aply to how we implement templates. 
  
/* GENERIC layout elements */

.oc-plainList { /* list with no formatting */
  list-style-type: none;
  padding: 0;
  margin: 0 0 1em;
}
dl.oc-plainList {
  line-height: normal;
}
dl.oc-plainList dt {
  font-weight: bold;
}
dl.oc-plainList dd {
  margin: 0 0 1em;
}
.oc-inlineList { /* comma-separated list (space-separated in IE) */
  list-style: none;
  margin: 0;
  padding: 0;
}
.oc-inlineList li {
  display: inline;
}
.oc-inlineList li:after {
  content: ", ";
}
.oc-inlineList li:last-child:after {
  content: "";
}
.oc-boxy {
  margin-bottom: 1em;
}
.oc-boxy h1,
.oc-boxy h2,
.oc-boxy h3,
.oc-boxy h4,
.oc-boxy h5 {
  margin: 0 0 0.5em;
}
.oc-boxy-content {
  margin: 0;
  padding: 0;
}
.oc-boxy legend.oc-legend-heading {
	padding-left: 0.25em;
	padding-right: 0.25em;
}
.oc-boxy textarea {
  margin: 0;
}

/* GENERIC search results & lineups */

.oc-lineup,
.oc-directory {
}
.oc-lineup-list {
  list-style-type: none;
  margin:  0;
  padding: 0;
  clear: both;
  border-top: 2px solid #eee;

}
.oc-lineup-item {
  margin: 0.25em 0;
  padding: 0.25em 0;
  border-bottom: 1px dotted #eee;
}
.oc-lineup-item h3 {
  display: inline;
}
.oc-lineup-item h3 img {
  vertical-align: bottom;
}
.oc-lineup-item p {
  margin: 0;
}
.oc-lineup-sorter,
.oc-directory-sorter,
.oc-feed-sorter {
  /* float: left; */
  font-size: 10px;
  margin-bottom: 1em;
}
.oc-lineup-sorter form,
.oc-lineup-sorter select,
.oc-directory-sorter form,
.oc-directory-sorter select,
.oc-feed-sorter form,
.oc-feed-sorter select {
  display: inline;
  font-size: 100%;
}
.oc-lineup-sorter input,
.oc-directory-sorter input {
  /* display: none; */
}
.oc-lineup .oc-paginator,
.oc-directory-sorter .oc-paginator {
  float: right;
  clear: none;
  font-size: 10px;
}

/* Directory view of search results */

.oc-directory-list {
  clear: both;
  list-style-type: none;
  padding: 0;
  margin: 0;
  width: 101%;
}
.oc-directory-list li {
  margin: 0 0.5% 0.25em 0;
  width: 49%;
  float: left;
  clear: none;
  white-space: nowrap;
  overflow: hidden;
  border: 1px solid #ccc;
  height: 80px;
  overflow: hidden;
}
.oc-directory-list .oc-project-logo,
.oc-directory-list .oc-avatar {
  width: 80px;
  height: 80px;
  overflow: hidden;
  float: left;
  margin-right: 1em;
}
.oc-directory-content {
  white-space: normal;
  padding: 0.5em;
}
.oc-directory-content .fn, /* OpenPlans username */
.oc-directory-content .n /* full name */ {
  margin: 0;
}
.oc-directory-content .adr /* location */ {
  font-style: normal;
}

/* Team View */
.oc-roster {
  clear: both;
  list-style-type: none;
  padding: 0;
}
.oc-roster .oc-avatar {
  width: 80px;
  height: 80px;
  overflow: hidden;
  float: left;
  clear: none;
  margin-right: 1em;
}
.oc-roster-content {
  float: left;
  clear: none;
  width: 60%;
  white-space: normal;
}
.oc-roster-content h3 /* OpenPlans username */{
  display: inline;
  margin: 0;
  font-weight: bold;
}
.oc-roster dl.oc-plainList dt {
  font-weight: bold;
  float: left;
  padding-right: 0.5em;
}
.oc-roster dl.oc-plainList dd {
  margin-bottom: 0;
}
/* Team View (Feed) */
#oc-feed-team ul.oc-feed-list {
}

#oc-feed-team ul.oc-feed-list li.oc-feed-item {
float:left;
width:82px;
height:90px;
margin:0.5em 6px 20px;
padding:0;
border:0 none transparent;
}

#oc-feed-team ul.oc-feed-list li.oc-feed-item a.oc-avatar {
display:block;
height:82px;
padding:0;
margin:0 0 0.75em;
}

#oc-feed-team ul.oc-feed-list li.oc-feed-item img {
border:1px solid #e6e6e6;
}

/* Portal Home */
#oc-home-content {
}
#oc-home-content .oc-headingBlock h1{
  font-size: 36px;
}
#oc-home-getstarted {

}
.oc-columnGroup,
.oc-home-columnGroup {
  width: auto;
}
.oc-column,
.oc-home-column {
  float: left;
  margin: 0 1%;
  clear: none;
  width: 47%;
}
.oc-column-33 {
	width: 32%;
	float: left;
	margin: 0 5px;
}
/* columns should be full-width and unfloated when in the sidebar */
#oc-content-sidebar .oc-column {
  float:none;
  width:auto;
}

#oc-home-news h2 {
	background: #6BA12A;
}

/* Member profile */

#oc-member-badge {
}
#oc-member-badge .oc-avatar {
  overflow: hidden;
  float: left; 
  clear: none; 
}
#oc-member-badge .oc-avatar img {
  margin: 0 auto;
}
#oc-member-badge .oc-member-details {
  margin-left: 200px; /* Overrideen by style attribute with actual image width value */
  padding-left: 1em;
}
/* ... */

